# Tasks_bot_docker

./: .gitignore  README.md  pyproject.toml
tasks_bot/: __main__.py  config.py  keyboards.py
tasks_bot/handlers/: admin_handlers.py
tasks_bot/lexicon/: lexicon.py
